# AutoTextETL

./: .gitignore  README.md  main.py  requirements.txt
application/: __init__.py  batch_processor.py  document_executor.py  error_recovery.py  pipeline_manager.py  resource_monitor.py  scheduler_service.py  task_dispatcher.py
config/: default_settings.json
domain/: __init__.py  chunk.py  document.py  enums.py  interfaces.py  pipeline.py  script_context.py
infrastructure/cpp_core/: CMakeLists.txt  bindings.cpp  text_engine.cpp
infrastructure/database/: __init__.py  config_service.py  logging_service.py  script_manager.py  unified_db.py
infrastructure/exporters/: __init__.py  file_exporter.py  json_exporter.py  mongodb_exporter.py  mysql_exporter.py  postgres_exporter.py  sqlite_exporter.py  target_db_exporter.py
infrastructure/loaders/: __init__.py  document_factory.py  pdf_loader.py  txt_loader.py
infrastructure/loaders/docx/: __init__.py  docx_loader.py  (+1 more)
infrastructure/processors/: __init__.py  delimiter_splitter.py  line_splitter.py  metadata_propagator.py  paragraph_splitter.py  regex_extractor.py  sentence_splitter.py
infrastructure/security/: __init__.py  crypto_service.py  script_sandbox.py
presentation/: __init__.py  main_window.py
presentation/components/: metadata_inspector.py  real_time_logger.py
presentation/widgets/: db_connection.py  document_uploader.py  pipeline_designer.py  run_history.py  scheduler_config.py  script_editor.py
resources/: styles.qss
utilities/: __init__.py  document_style_analyzer.py  header_filter.py
